[MOD] XQuery Update: memory consumption reduced.